--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>First Git</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Eius obcaecati magnam quam cupiditate qui iusto, repellendus non laboriosam commodi quod a.
+    Quibusdam tenetur beatae molestias non optio magni qui quisquam.</p>
 </body>
 </html>
